2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XXMakefile config.h: removed from CVS
	  these are autogenerated files.
	  config.h is moved to config.h.dist as sample config file.

2001-11-20  Tsutomu Okada <okada@furuno.co.jp>

	* file.c (HTMLtagproc1): reimplement meta refresh with
          setAlarmEvent()

	* fm.h: put back alarm related variables to main.c
          add alarm related status flags

	* main.c: put back alarm related variables from fm.h
          alarm_once was renamed alarm_status
          add alarm_buffer and setAlarmEvent()

	* main.c (MAIN): cancel the alarm event if the buffer was
          changed

	* main.c (SigAlarm): ditto

	* main.c (setAlarm): use setAlarmEvent()

	* proto.h: add setAlarmEvent()

2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mhelperpanel.c (extractMailcapEntry): remove unused variables
	* istream.c (StrISgets): add parentheses around assignment used 
	  as truth value
	
	* XMakefile (clean): remove funcname.c funcname1.h funcname2.h
	  these are autogenerated files.
	* funcname.c funcname1.h funcname2.h: removed from CVS

	* main.c (MAIN): add braces to avoid ambiguous `else'
	* main.c (set_buffer_environ): remove unused variables
	* linein.c (_rcompl): not EMACS_LIKE_LINEEDIT only
	* local.c (localcgi_get): remove unused variables
	* mailcap.c (unquote_mailcap_loop): remove unused variables
	* url.c (init_PRNG) add parentheses around assignment used as true value
	* url.c (parseURL): remove unsed label
	* url.c (parseURL2): remove unused variables
	* ftp.c (ftp_escape_str ftp_restore_str): remove not used functions
	* indep.c (getescapechar): remove unused variable
	
	* proto.h: add missing prototypes

2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* terms.c (skip_escseq): [w3m-dev 02447]
	  is_xterm && ESC [ M <ch> <ch> <ch>

2001-11-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (mouse_init): Gpm_Close() is required.
	  closes: Debian Bug#120221: w3m-ssl: trashes terminal on exit
